--- a/games/index.html
+++ b/games/index.html
@@ -25,19 +25,19 @@ title: Games
         {%- assign captureTheFrogTitle = item.title -%}
     {%- endif -%}
 {%- endfor -%}
-<p>For a list of games that I am presently working on or have previously worked on as an employee of another company, please see my <a href="{{ site.linkedInUrl }}">r&eacute;sum&eacute;</a>.</p>
+<p>
+<p>For a list of games that I am presently working on or have previously worked on as an employee of another company, please see my <a href="{{ site.linkedInUrl }}">r&eacute;sum&eacute;</a>.
 <p>The following is a reverse chronological list of games that I have made myself.</p>
 <p>
-    <h3>{{ unityPrototypeTitle }}</h3>
+    <strong>{{ unityPrototypeTitle }}</strong>
     <ul>
         <li><a href = "{{ unityPrototypePageRelDir }}">Play here</a>
     </ul>
 </p>
 <p>
-    <h3>{{ dodgeAndShootTitle }}</h3>
-    <p>
-        <img src="/images/DodgeAndShoot_thumb.jpg" class="customBorder" alt="Dodge & Shoot">
-    </p>
+    <strong>{{ dodgeAndShootTitle }}</strong>
+    <br>
+    <img src="/images/DodgeAndShoot_thumb.jpg" class="customBorder" alt="Dodge & Shoot">
     <ul>
         <li><a href = "{{ dodgeAndShootPageRelDir }}">Play here</a>
         <li><a href = "http://www.newgrounds.com/portal/view/534962">Play at Newgrounds</a>
@@ -46,10 +46,9 @@ title: Games
     </ul>
 </p>
 <p>
-    <h3>{{ captureTheFrogTitle }}</h3>
-    <p>
-        <img src="/images/CaptureTheFrog_thumb.jpg" class="customBorder" alt="Capture The Frog">
-    </p>
+    <strong>{{ captureTheFrogTitle }}</strong>
+    <br>
+    <img src="/images/CaptureTheFrog_thumb.jpg" class="customBorder" alt="Capture The Frog">
     <ul>
         <li><a href = "{{ captureTheFrogPageRelDir }}">Play here</a>
         <li><a href = "http://www.newgrounds.com/portal/view/526314">Play at Newgrounds</a>
