--- a/test.html
+++ b/test.html
@@ -8,39 +8,39 @@
     <body>
         <div class="container-page">
             <div class="item-page-title">
-                <h1 style="text-align:center">Testing, testing, 1, 2, 3.</h1>
+                <h1 class="centered">Testing, testing, 1, 2, 3.</h1>
             </div>
             <div class="item-page-banner">
-                <p style="text-align:center"><img src="https://www.jplc.ca/images/eye_banner.jpg"></p>
+                <p class="centered"><img src="https://www.jplc.ca/images/eye_banner.jpg"></p>
             </div>
             <div class="item-page-nav">
                 <div class="container-nav">
                     <div class="item-nav-item-1">
-                        <p style="text-align:center">Home</p>
+                        <p class="centered">Home</p>
                     </div>
                     <div class="item-nav-item-2">
-                        <p style="text-align:center">About Me</p>
+                        <p class="centered">About Me</p>
                     </div>
                     <div class="item-nav-item-3">
-                        <p style="text-align:center">Games</p>
+                        <p class="centered">Games</p>
                     </div>
                     <div class="item-nav-item-4">
-                        <p style="text-align:center">Résumé</p>
+                        <p class="centered">Résumé</p>
                     </div>
                     <div class="item-nav-item-5">
-                        <p style="text-align:center">Contact</p>
+                        <p class="centered">Contact</p>
                     </div>
                 </div>
             </div>
             <div class="item-page-content">
-                <h2 style="text-align:center">Howdy</h2>
-                <p style="text-align:left">
+                <h2 class="centered">Howdy</h2>
+                <p>
                     Content goes here. Blah blah blah, bloo bloo bloo. Blee blee blee. Blargh blargh blargh.
                 </p>
             </div>
             <div class="item-page-footer">
-                <p style="text-align:center">~</p>
-                <p style="text-align:center">My page.</p>
+                <p class="centered">~</p>
+                <p class="centered">My page.</p>
             </div>
         </div>
     </body>
